when splitting deps into module path and a classpath, honor module requires specified by the '--add-reads' command line option (IDEA-297024)
(cherry picked from commit 534fc10b9ee80f3b848d65942c2d5f87e1b4faea)

IJ-CR-26555

GitOrigin-RevId: 62a374cd0efa57b8c336aafed00c085e2f4d39e2